--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -28,6 +28,10 @@
     }
 }
 
+.slick-disabled {
+    display: none !important;
+}
+
 .section-share {
     &.section-specialty {
         background: #f5f5f5;
@@ -97,7 +101,7 @@
                     width: 120px;
                     height: 120px;
                     border-radius: 50%;
-                    background-image: url("../../assets/outstanding-doctor/bac-si-avatar.png");
+                    // background-image: url("../../assets/outstanding-doctor/bac-si-avatar.png");
                 }
                 &.section-handbook {
                     background-image: url("../../assets/handbook/handbook.png");
