feat: add manage doctor detail

--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -46,6 +46,7 @@
 
         .section-customize {
             padding: 5px;
+            cursor: pointer;
             .customize-border {
                 border: 1px solid #d7d7d7;
                 padding: 20px;
