feat: add DoctorExtraInfo component

--- a/src/containers/Patient/Doctor/DoctorSchedule.scss
+++ b/src/containers/Patient/Doctor/DoctorSchedule.scss
@@ -1,6 +1,7 @@
 .doctor-schedule-container {
     border-right: 1px solid #ddd;
     height: 100%;
+    padding-right: 15px;
     .all-schedule {
         select {
             border-bottom: 1px solid #ddd;
