--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -3,15 +3,16 @@
         display: flex;
         margin: 0 100px;
         .content-left {
-            width: 20%;
-            background: center center no-repeat;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center center;
             width: 120px;
             height: 120px;
             border-radius: 50%;
             margin: 10px 20px;
         }
         .content-right {
-            width: 80%;
+            width: calc(100% - 120px);
             display: flex;
             flex-direction: column;
             padding-left: 10px;
