--- a/src/containers/Auth/Login.scss
+++ b/src/containers/Auth/Login.scss
@@ -1,10 +1,14 @@
 .login-background {
-    background: linear-gradient(135deg, rgba(34, 193, 195, 1)0%, rgba(254, 187, 45, 1)100%);
+    background: linear-gradient(
+        135deg,
+        rgba(34, 193, 195, 1) 0%,
+        rgba(254, 187, 45, 1) 100%
+    );
     height: 100vh;
 
     .login-container {
         width: 400px;
-        height: 450px;
+        height: fit-content;
         margin: auto;
         border-radius: 10px;
         background-color: white;
@@ -47,7 +51,11 @@
                 border-radius: 15px;
                 outline: none;
                 border: none;
-                background: linear-gradient(135deg, rgba(34, 193, 195, 1)0%, rgba(254, 187, 45, 1)100%);
+                background: linear-gradient(
+                    135deg,
+                    rgba(34, 193, 195, 1) 0%,
+                    rgba(254, 187, 45, 1) 100%
+                );
                 color: white;
             }
 
@@ -83,7 +91,7 @@
                     display: flex;
                     align-items: center;
                     justify-content: center;
-                    color: white
+                    color: white;
                 }
             }
         }
