--- a/src/containers/System/Admin/UserRedux.scss
+++ b/src/containers/System/Admin/UserRedux.scss
@@ -15,6 +15,6 @@
         width: 100%;
         background-size: contain;
         background-repeat: no-repeat;
-        cursor: pointer;
+        // cursor: pointer;
     }
 }
