--- a/src/containers/System/Admin/TableManageUser.scss
+++ b/src/containers/System/Admin/TableManageUser.scss
@@ -25,3 +25,29 @@
     background-color: #04aa6d;
     color: white;
 }
+
+.btn-edit {
+    width: 50px;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: orange;
+
+    &:hover {
+        background: transparent !important;
+        color: orange !important;
+    }
+}
+
+.btn-delete {
+    width: 50px;
+    border: none;
+    outline: none;
+    background: transparent;
+    color: red;
+
+    &:hover {
+        background: transparent !important;
+        color: red !important;
+    }
+}
