--- a/src/containers/System/Admin/TableManageUser.scss
+++ b/src/containers/System/Admin/TableManageUser.scss
@@ -1,24 +1,24 @@
-#TableManageUser {
+#TableManage {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
 }
 
-#TableManageUser td,
-#TableManageUser th {
+#TableManage td,
+#TableManage th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#TableManageUser tr:nth-child(even) {
+#TableManage tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#TableManageUser tr:hover {
+#TableManage tr:hover {
     background-color: #ddd;
 }
 
-#TableManageUser th {
+#TableManage th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
