--- a/src/containers/Patient/Clinic/AllClinics.scss
+++ b/src/containers/Patient/Clinic/AllClinics.scss
@@ -1,7 +1,7 @@
-.all-specialties-container {
+.all-clinics-container {
     background-color: #f5f5f5;
 
-    .all-specialties-header {
+    .all-clinics-header {
         background-color: #49bce2;
         padding: 40px 0;
         margin-bottom: 30px;
@@ -21,10 +21,10 @@
         }
     }
 
-    .all-specialties-body {
+    .all-clinics-body {
         padding: 20px 0 50px;
 
-        .specialty-item {
+        .clinic-item {
             margin-bottom: 30px;
             transition: all 0.2s ease;
 
@@ -32,7 +32,7 @@
                 transform: translateY(-5px);
             }
 
-            .specialty-card {
+            .clinic-card {
                 background-color: white;
                 border-radius: 10px;
                 overflow: hidden;
@@ -42,7 +42,7 @@
                 display: flex;
                 flex-direction: column;
 
-                .specialty-image {
+                .clinic-image {
                     height: 200px;
                     background-position: center;
                     background-repeat: no-repeat;
@@ -54,20 +54,31 @@
                     }
                 }
 
-                .specialty-info {
+                .clinic-info {
                     padding: 20px;
                     flex: 1;
                     display: flex;
                     flex-direction: column;
 
-                    .specialty-name {
+                    .clinic-name {
                         font-size: 18px;
                         font-weight: 600;
-                        margin-bottom: 15px;
+                        margin-bottom: 10px;
                         color: #49bce2;
                     }
 
-                    .specialty-description {
+                    .clinic-address {
+                        font-size: 14px;
+                        color: #555;
+                        margin-bottom: 15px;
+
+                        i {
+                            color: #49bce2;
+                            margin-right: 5px;
+                        }
+                    }
+
+                    .clinic-description {
                         font-size: 14px;
                         color: #666;
                         margin-bottom: 15px;
@@ -101,8 +112,8 @@
 }
 
 @media (max-width: 768px) {
-    .all-specialties-container {
-        .all-specialties-header {
+    .all-clinics-container {
+        .all-clinics-header {
             padding: 30px 0;
 
             h1 {
@@ -110,7 +121,7 @@
             }
         }
 
-        .specialty-item {
+        .clinic-item {
             margin-bottom: 20px;
         }
     }
