--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -3,7 +3,7 @@
         display: flex;
         margin: 0 100px;
         .content-left {
-            background-size: cover;
+            background-size: contain;
             background-repeat: no-repeat;
             background-position: center center;
             width: 120px;
