--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -32,6 +32,19 @@
     display: none !important;
 }
 
+.homepage-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    .homepage-content {
+        width: 100%;
+        max-width: 1440px;
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto;
+    }
+}
+
 .section-share {
     &.section-specialty {
         background: #f5f5f5;
@@ -57,7 +70,6 @@
         height: 500px !important;
         padding: 0 100px;
         border-top: 1px solid #f5f5f5;
-        border-bottom: 1px solid #f5f5f5;
         .section-about-header {
             padding: 20px 0;
             font-size: 22px;
@@ -87,9 +99,9 @@
                 width: 278px;
                 height: 150px;
                 background-position: center center;
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
-                background-color: #eee;
+                // background-color: #eee;
                 padding-bottom: 10px;
 
                 &.section-outstanding-doctor {
@@ -143,6 +155,7 @@
 .home-footer {
     text-align: center;
     padding-top: 8px;
+    border-top: 1px solid #f5f5f5;
     a {
         text-decoration: none;
     }
