--- a/src/containers/Patient/Clinic/AllClinics.scss
+++ b/src/containers/Patient/Clinic/AllClinics.scss
@@ -46,7 +46,7 @@
                     height: 200px;
                     background-position: center;
                     background-repeat: no-repeat;
-                    background-size: cover;
+                    background-size: contain;
                     transition: all 0.3s ease;
 
                     &:hover {
