--- a/src/containers/Patient/Doctor/AllDoctors.scss
+++ b/src/containers/Patient/Doctor/AllDoctors.scss
@@ -54,7 +54,7 @@
                         border-radius: 50%;
                         background-position: center;
                         background-repeat: no-repeat;
-                        background-size: cover;
+                        background-size: contain;
                         transition: all 0.3s ease;
                         border: 3px solid #49bce2;
 
