--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -8,7 +8,7 @@
             align-items: center;
             margin: 10px 20px;
             &__image {
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center center;
                 width: 80px;
