--- a/src/containers/Search/SearchContainer.scss
+++ b/src/containers/Search/SearchContainer.scss
@@ -128,7 +128,7 @@
                             height: 100%;
                             background-position: center;
                             background-repeat: no-repeat;
-                            background-size: cover;
+                            background-size: contain;
                         }
 
                         &.doctor-image .image {
