--- a/src/containers/Search/SearchResultPage.scss
+++ b/src/containers/Search/SearchResultPage.scss
@@ -154,7 +154,7 @@
                         border-radius: 50%;
                         background-position: center;
                         background-repeat: no-repeat;
-                        background-size: cover;
+                        background-size: contain;
                         border: 3px solid #49bce2;
                     }
 
@@ -228,7 +228,7 @@
                         height: 180px;
                         background-position: center;
                         background-repeat: no-repeat;
-                        background-size: cover;
+                        background-size: contain;
                     }
 
                     .specialty-info,
