--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -1,98 +1,107 @@
 .home-header-container {
     height: 60px;
     width: 100%;
-    padding: 0 40px;
     position: sticky;
     top: 0;
     background-color: white;
     z-index: 100;
 
-    .home-header-content {
+    .home-header-navbar {
         width: 100%;
-        height: 100%;
-        display: flex;
-
-        .left-content {
-            width: 20%;
+        padding: 0 calc((100% - 1440px) / 2);
+        .home-header-content {
+            width: 100%;
+            height: 100%;
             display: flex;
-            align-items: center;
+            padding-top: 10px;
 
-            .header-logo {
-                height: 100%;
-                width: 100%;
-                cursor: pointer;
-                transform: scale(0.5, 0.5);
-                margin-left: -45px;
-            }
-
-            i {
-                font-size: 25px;
-                color: gray;
-                cursor: pointer;
-            }
-        }
-
-        .center-content {
-            width: 55%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-
-            .child-content {
-                .subs-title {
-                    font-weight: 400;
-                    font-size: 12px;
-                }
-            }
-        }
-
-        .right-content {
-            width: 25%;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-
-            .support {
-                padding-right: 50px;
+            .left-content {
+                width: 20%;
                 display: flex;
+                justify-content: flex-start;
                 align-items: center;
-                cursor: pointer;
+
+                .header-logo-wrapper {
+                    width: 200px;
+                    height: 100%;
+
+                    .header-logo {
+                        height: 100%;
+                        width: 100%;
+                        cursor: pointer;
+                    }
+                }
 
                 i {
-                    font-size: 15px;
-                    margin-right: 5px;
+                    font-size: 25px;
+                    color: gray;
+                    cursor: pointer;
                 }
             }
 
-            .language-vi {
-                cursor: pointer;
-                opacity: 0.2;
+            .center-content {
+                width: 55%;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
 
-                &:hover {
-                    opacity: 0.8;
-                }
-
-                &.active {
-                    opacity: 1;
-                    span {
-                        color: orange;
+                .child-content {
+                    .subs-title {
+                        font-weight: 400;
+                        font-size: 12px;
                     }
                 }
             }
 
-            .language-en {
-                margin: 0 10px;
-                cursor: pointer;
-                opacity: 0.2;
+            .right-content {
+                width: 25%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
 
-                &:hover {
-                    opacity: 0.8;
+                .support {
+                    padding-right: 50px;
+                    display: flex;
+                    align-items: center;
+                    cursor: pointer;
+
+                    i {
+                        font-size: 15px;
+                        margin-right: 5px;
+                    }
                 }
 
-                &.active {
-                    opacity: 1;
-                    span {
-                        color: blue;
+                .language-vi {
+                    cursor: pointer;
+                    opacity: 0.2;
+
+                    &:hover {
+                        opacity: 0.8;
+                    }
+
+                    &.active {
+                        opacity: 1;
+                        span {
+                            color: orange;
+                        }
+                    }
+                }
+
+                .language-en {
+                    margin: 0 10px;
+                    margin-right: 0;
+                    cursor: pointer;
+                    opacity: 0.2;
+
+                    &:hover {
+                        opacity: 0.8;
+                    }
+
+                    &.active {
+                        opacity: 1;
+                        span {
+                            color: blue;
+                        }
                     }
                 }
             }
@@ -147,21 +156,6 @@
             align-items: center;
             margin: 0 auto;
             width: 100%;
-            // padding: 10px;
-            // border-radius: 25px;
-            // background: #f7d800;
-
-            // i {
-            //     margin: 0 5px;
-            // }
-
-            // input {
-            //     height: 30px;
-            //     width: 360px;
-            //     background: transparent;
-            //     border: none;
-            //     outline: none;
-            // }
         }
     }
 
