--- a/src/containers/System/Admin/TableManageUser.scss
+++ b/src/containers/System/Admin/TableManageUser.scss
@@ -22,7 +22,7 @@
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
-    background-color: #04aa6d;
+    background-color: #49bce2;
     color: white;
 }
 
