--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -43,6 +43,12 @@
     .striped {
         background-color: #f5f5f5;
     }
+    .homepage-content-background {
+        background-image: url("../../assets/homepage_background_1.png");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
 }
 
 .section-share {
@@ -152,9 +158,20 @@
 
 .home-footer {
     text-align: center;
-    padding-top: 8px;
-    border-top: 1px solid #f5f5f5;
+    padding: 16px 0;
+    background-color: #49bce2;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    p {
+        margin: 0;
+    }
     a {
         text-decoration: none;
     }
+}
+
+.loading-overlay {
+    height: 100%;
 }
